Changelog for faqMan.

1.1 pl
=====================
- Support for multiple rich-text editors
- Settings cleanup
- Lexicon cleanup

FAQ Manager 1.0.6 pl
=====================
- French translation

FAQ Manager 1.0.5 pl
=====================
- Now supports rich-text in answers
- Dutch translation

FAQ Manager 1.0.4 rc1
======================
- Changed answers to be in the row body

faqMan 1.0.3 rc1
==============
- German translation
- Questions & answers are now only limited by the size of TEXT
- Fixed snippet property
- Initial release.