@@ -25,37 +25,39 @@
  * @package faqman
  * @subpackage build
  */
-$mtime = microtime();
-$mtime = explode(" ", $mtime);
-$mtime = $mtime[1] + $mtime[0];
+$mtime  = microtime();
+$mtime  = explode(" ", $mtime);
+$mtime  = $mtime[1] + $mtime[0];
 $tstart = $mtime;
 set_time_limit(0);
 
-/* define package name */
-define('PKG_NAME','faqMan');
-define('PKG_NAME_LOWER',strtolower(PKG_NAME));
+// Define package name
+define('PKG_NAME', 'faqMan');
+define('PKG_NAME_LOWER', strtolower(PKG_NAME));
 
-/* define sources */
+// Define sources
 $root = dirname(dirname(__FILE__)).'/';
 $sources = array(
-    'root' => $root,
-    'core' => $root.'core/components/'.PKG_NAME_LOWER.'/',
-    'model' => $root.'core/components/'.PKG_NAME_LOWER.'/model/',
-    'assets' => $root.'assets/components/'.PKG_NAME_LOWER.'/',
+    'root'   => $root,
+    'core'   => $root . 'core/components/' . PKG_NAME_LOWER . '/',
+    'model'  => $root . 'core/components/' . PKG_NAME_LOWER . '/model/',
+    'assets' => $root . 'assets/components/' . PKG_NAME_LOWER . '/',
 );
 
-/* load modx and configs */
+// Load modx and configs
 require_once dirname(__FILE__) . '/build.config.php';
 include_once MODX_CORE_PATH . 'model/modx/modx.class.php';
-$modx= new modX();
+$modx = new modX();
 $modx->initialize('mgr');
-$modx->loadClass('transport.modPackageBuilder','',false, true);
-echo '<pre>'; /* used for nice formatting of log messages */
+$modx->loadClass('transport.modPackageBuilder', '', false, true);
+
+// Used for nice formatting of log messages
+echo '<pre>';
 $modx->setLogLevel(modX::LOG_LEVEL_INFO);
 $modx->setLogTarget('ECHO');
 
-$manager= $modx->getManager();
-$generator= $manager->getGenerator();
+$manager   = $modx->getManager();
+$generator = $manager->getGenerator();
 
 $generator->classTemplate= <<<EOD
 <?php
@@ -82,13 +84,12 @@ $generator->mapHeader= <<<EOD
 EOD;
 $generator->parseSchema($sources['model'] . 'schema/'.PKG_NAME_LOWER.'.mysql.schema.xml', $sources['model']);
 
-
-$mtime= microtime();
-$mtime= explode(" ", $mtime);
-$mtime= $mtime[1] + $mtime[0];
-$tend= $mtime;
-$totalTime= ($tend - $tstart);
-$totalTime= sprintf("%2.4f s", $totalTime);
+$mtime     = microtime();
+$mtime     = explode(" ", $mtime);
+$mtime     = $mtime[1] + $mtime[0];
+$tend      = $mtime;
+$totalTime = ($tend - $tstart);
+$totalTime = sprintf("%2.4f s", $totalTime);
 
 echo "\nExecution time: {$totalTime}\n";
 
