@@ -25,33 +25,33 @@
  * @package faqman 
  * @subpackage build
  */
-$mtime = microtime();
-$mtime = explode(' ', $mtime);
-$mtime = $mtime[1] + $mtime[0];
+$mtime  = microtime();
+$mtime  = explode(' ', $mtime);
+$mtime  = $mtime[1] + $mtime[0];
 $tstart = $mtime;
 set_time_limit(0);
 
-/* define package */
+// Define package
 define('PKG_NAME','faqMan');
 define('PKG_NAME_LOWER',strtolower(PKG_NAME));
 define('PKG_VERSION','1.1.0');
 define('PKG_RELEASE','pl');
 
-/* define sources */
-$root = dirname(dirname(__FILE__)).'/';
+// Define sources
+$root    = dirname(dirname(__FILE__)) . '/';
 $sources = array(
-    'root' => $root,
-    'build' => $root . '_build/',
-    'data' => $root . '_build/data/',
-    'resolvers' => $root . '_build/resolvers/',
-    'chunks' => $root.'core/components/'.PKG_NAME_LOWER.'/elements/chunks/',
-    'snippets' => $root.'core/components/'.PKG_NAME_LOWER.'/elements/snippets/',
-    'plugins' => $root.'core/components/'.PKG_NAME_LOWER.'/elements/plugins/',
-    'lexicon' => $root . 'core/components/'.PKG_NAME_LOWER.'/lexicon/',
-    'docs' => $root.'core/components/'.PKG_NAME_LOWER.'/docs/',
-    'pages' => $root.'core/components/'.PKG_NAME_LOWER.'/elements/pages/',
-    'source_assets' => $root.'assets/components/'.PKG_NAME_LOWER,
-    'source_core' => $root.'core/components/'.PKG_NAME_LOWER,
+    'root'          => $root,
+    'build'         => $root . '_build/',
+    'data'          => $root . '_build/data/',
+    'resolvers'     => $root . '_build/resolvers/',
+    'chunks'        => $root . 'core/components/' . PKG_NAME_LOWER . '/elements/chunks/',
+    'snippets'      => $root . 'core/components/' . PKG_NAME_LOWER . '/elements/snippets/',
+    'plugins'       => $root . 'core/components/' . PKG_NAME_LOWER . '/elements/plugins/',
+    'lexicon'       => $root . 'core/components/' . PKG_NAME_LOWER . '/lexicon/',
+    'docs'          => $root . 'core/components/' . PKG_NAME_LOWER . '/docs/',
+    'pages'         => $root . 'core/components/' . PKG_NAME_LOWER . '/elements/pages/',
+    'source_assets' => $root . 'assets/components/' . PKG_NAME_LOWER,
+    'source_core'   => $root . 'core/components/' . PKG_NAME_LOWER,
 );
 unset($root);
 
@@ -60,155 +60,157 @@ require_once $sources['build'] . '/build.config.php';
 require_once MODX_CORE_PATH . 'model/modx/modx.class.php';
 require_once $sources['build'] . '/includes/functions.php';
 
-$modx= new modX();
+$modx = new modX();
 $modx->initialize('mgr');
-echo '<pre>'; /* used for nice formatting of log messages */
+
+// Used for nice formatting of log messages
+echo '<pre>';
 $modx->setLogLevel(modX::LOG_LEVEL_INFO);
 $modx->setLogTarget('ECHO');
 
-$modx->loadClass('transport.modPackageBuilder','',false, true);
+$modx->loadClass('transport.modPackageBuilder', '', false, true);
 $builder = new modPackageBuilder($modx);
-$builder->createPackage(PKG_NAME_LOWER,PKG_VERSION,PKG_RELEASE);
-$builder->registerNamespace(PKG_NAME_LOWER,false,true,'{core_path}components/'.PKG_NAME_LOWER.'/');
-$modx->log(modX::LOG_LEVEL_INFO,'Created Transport Package and Namespace.');
+$builder->createPackage(PKG_NAME_LOWER, PKG_VERSION, PKG_RELEASE);
+$builder->registerNamespace(PKG_NAME_LOWER, false, true, '{core_path}components/' . PKG_NAME_LOWER . '/');
+$modx->log(modX::LOG_LEVEL_INFO, 'Created Transport Package and Namespace.');
 
-/* create category */
-$category= $modx->newObject('modCategory');
-$category->set('id',1);
-$category->set('category',PKG_NAME);
+// Create category
+$category = $modx->newObject('modCategory');
+$category->set('id', 1);
+$category->set('category', PKG_NAME);
 
-/* add snippets */
-$snippets = include $sources['data'].'transport.snippets.php';
+// Add snippets
+$snippets = include $sources['data'] . 'transport.snippets.php';
 if (!is_array($snippets)) {
-    $modx->log(modX::LOG_LEVEL_ERROR,'Could not package in snippets.');
+    $modx->log(modX::LOG_LEVEL_ERROR, 'Could not package in snippets.');
 } else {
     $category->addMany($snippets);
-    $modx->log(modX::LOG_LEVEL_INFO,'Packaged in '.count($snippets).' snippets.');
+    $modx->log(modX::LOG_LEVEL_INFO, 'Packaged in ' . count($snippets) . ' snippets.');
 }
 
 /* create category vehicle */
 $attr = array(
-    xPDOTransport::UNIQUE_KEY => 'category',
-    xPDOTransport::PRESERVE_KEYS => false,
-    xPDOTransport::UPDATE_OBJECT => true,
-    xPDOTransport::RELATED_OBJECTS => true,
+    xPDOTransport::UNIQUE_KEY                => 'category',
+    xPDOTransport::PRESERVE_KEYS             => false,
+    xPDOTransport::UPDATE_OBJECT             => true,
+    xPDOTransport::RELATED_OBJECTS           => true,
     xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
         'Children' => array(
-            xPDOTransport::PRESERVE_KEYS => false,
-            xPDOTransport::UPDATE_OBJECT => true,
-            xPDOTransport::UNIQUE_KEY => 'category',
-            xPDOTransport::RELATED_OBJECTS => true,
+            xPDOTransport::PRESERVE_KEYS             => false,
+            xPDOTransport::UPDATE_OBJECT             => true,
+            xPDOTransport::UNIQUE_KEY                => 'category',
+            xPDOTransport::RELATED_OBJECTS           => true,
             xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
                 'Snippets' => array(
                     xPDOTransport::PRESERVE_KEYS => false,
                     xPDOTransport::UPDATE_OBJECT => true,
-                    xPDOTransport::UNIQUE_KEY => 'name',
+                    xPDOTransport::UNIQUE_KEY    => 'name',
                 ),
                 'Chunks' => array(
                     xPDOTransport::PRESERVE_KEYS => false,
                     xPDOTransport::UPDATE_OBJECT => true,
-                    xPDOTransport::UNIQUE_KEY => 'name',
+                    xPDOTransport::UNIQUE_KEY    => 'name',
                 ),
             ),
         ),
         'Snippets' => array(
             xPDOTransport::PRESERVE_KEYS => false,
             xPDOTransport::UPDATE_OBJECT => true,
-            xPDOTransport::UNIQUE_KEY => 'name',
+            xPDOTransport::UNIQUE_KEY    => 'name',
         ),
         'Chunks' => array (
             xPDOTransport::PRESERVE_KEYS => false,
             xPDOTransport::UPDATE_OBJECT => true,
-            xPDOTransport::UNIQUE_KEY => 'name',
+            xPDOTransport::UNIQUE_KEY    => 'name',
         ),
     ),
 );
-$vehicle = $builder->createVehicle($category,$attr);
+$vehicle = $builder->createVehicle($category, $attr);
 
-$modx->log(modX::LOG_LEVEL_INFO,'Adding file resolvers to category...');
-$vehicle->resolve('file',array(
+$modx->log(modX::LOG_LEVEL_INFO, 'Adding file resolvers to category...');
+$vehicle->resolve('file', array(
     'source' => $sources['source_assets'],
     'target' => "return MODX_ASSETS_PATH . 'components/';",
 ));
-$vehicle->resolve('file',array(
+$vehicle->resolve('file', array(
     'source' => $sources['source_core'],
     'target' => "return MODX_CORE_PATH . 'components/';",
 ));
 $builder->putVehicle($vehicle);
 
 /* load system settings */
-$settings = include $sources['data'].'transport.settings.php';
+$settings = include $sources['data'] . 'transport.settings.php';
 if (!is_array($settings)) {
-    $modx->log(modX::LOG_LEVEL_ERROR,'Could not package in settings.');
+    $modx->log(modX::LOG_LEVEL_ERROR, 'Could not package in settings.');
 } else {
-    $attributes= array(
-        xPDOTransport::UNIQUE_KEY => 'key',
+    $attributes = array(
+        xPDOTransport::UNIQUE_KEY    => 'key',
         xPDOTransport::PRESERVE_KEYS => true,
         xPDOTransport::UPDATE_OBJECT => false,
     );
     foreach ($settings as $setting) {
-        $vehicle = $builder->createVehicle($setting,$attributes);
+        $vehicle = $builder->createVehicle($setting, $attributes);
         $builder->putVehicle($vehicle);
     }
-    $modx->log(modX::LOG_LEVEL_INFO,'Packaged in '.count($settings).' System Settings.');
+    $modx->log(modX::LOG_LEVEL_INFO, 'Packaged in ' . count($settings) . ' System Settings.');
 }
-unset($settings,$setting,$attributes);
+unset($settings, $setting, $attributes);
 
-/* load menu */
-$menu = include $sources['data'].'transport.menu.php';
+// Load menu
+$menu = include $sources['data'] . 'transport.menu.php';
 if (empty($menu)) {
-    $modx->log(modX::LOG_LEVEL_ERROR,'Could not package in menu.');
+    $modx->log(modX::LOG_LEVEL_ERROR, 'Could not package in menu.');
 } else {
-    $vehicle= $builder->createVehicle($menu,array (
-        xPDOTransport::PRESERVE_KEYS => true,
-        xPDOTransport::UPDATE_OBJECT => true,
-        xPDOTransport::UNIQUE_KEY => 'text',
-        xPDOTransport::RELATED_OBJECTS => true,
+    $vehicle= $builder->createVehicle($menu, array (
+        xPDOTransport::PRESERVE_KEYS             => true,
+        xPDOTransport::UPDATE_OBJECT             => true,
+        xPDOTransport::UNIQUE_KEY                => 'text',
+        xPDOTransport::RELATED_OBJECTS           => true,
         xPDOTransport::RELATED_OBJECT_ATTRIBUTES => array (
             'Action' => array (
                 xPDOTransport::PRESERVE_KEYS => false,
                 xPDOTransport::UPDATE_OBJECT => true,
-                xPDOTransport::UNIQUE_KEY => array ('namespace','controller'),
+                xPDOTransport::UNIQUE_KEY    => array ('namespace','controller'),
             ),
         ),
     ));
-    $modx->log(modX::LOG_LEVEL_INFO,'Adding in PHP resolvers...');
-    $vehicle->resolve('php',array(
+    $modx->log(modX::LOG_LEVEL_INFO, 'Adding in PHP resolvers...');
+    $vehicle->resolve('php', array(
         'source' => $sources['resolvers'] . 'resolve.tables.php',
     ));
-    $vehicle->resolve('php',array(
+    $vehicle->resolve('php', array(
         'source' => $sources['resolvers'] . 'resolve.settings.php',
     ));
-    $vehicle->resolve('php',array(
+    $vehicle->resolve('php', array(
         'source' => $sources['resolvers'] . 'resolve.paths.php',
     ));
     $builder->putVehicle($vehicle);
-    $modx->log(modX::LOG_LEVEL_INFO,'Packaged in menu.');
+    $modx->log(modX::LOG_LEVEL_INFO, 'Packaged in menu.');
 }
-unset($vehicle,$menu);
+unset($vehicle, $menu);
 
-/* now pack in the license file, readme and setup options */
+// Now pack in the license file, readme and setup options
 $builder->setPackageAttributes(array(
-    'license' => file_get_contents($sources['docs'] . 'license.txt'),
-    'readme' => file_get_contents($sources['docs'] . 'readme.txt'),
+    'license'   => file_get_contents($sources['docs'] . 'license.txt'),
+    'readme'    => file_get_contents($sources['docs'] . 'readme.txt'),
     'changelog' => file_get_contents($sources['docs'] . 'changelog.txt'),
     //'setup-options' => array(
         //'source' => $sources['build'].'setup.options.php',
     //),
 ));
-$modx->log(modX::LOG_LEVEL_INFO,'Added package attributes and setup options.');
+$modx->log(modX::LOG_LEVEL_INFO, 'Added package attributes and setup options.');
 
-/* zip up package */
-$modx->log(modX::LOG_LEVEL_INFO,'Packing up transport package zip...');
+// Zip up package
+$modx->log(modX::LOG_LEVEL_INFO, 'Packing up transport package zip...');
 $builder->pack();
 
-$mtime= microtime();
-$mtime= explode(" ", $mtime);
-$mtime= $mtime[1] + $mtime[0];
-$tend= $mtime;
-$totalTime= ($tend - $tstart);
-$totalTime= sprintf("%2.4f s", $totalTime);
+$mtime     = microtime();
+$mtime     = explode(" ", $mtime);
+$mtime     = $mtime[1] + $mtime[0];
+$tend      = $mtime;
+$totalTime = ($tend - $tstart);
+$totalTime = sprintf("%2.4f s", $totalTime);
 
-$modx->log(modX::LOG_LEVEL_INFO,"\n<br />Package Built.<br />\nExecution time: {$totalTime}\n");
+$modx->log(modX::LOG_LEVEL_INFO, "\n<br />Package Built.<br />\nExecution time: {$totalTime}\n");
 
 exit ();
