@@ -27,26 +27,26 @@
  */
 $action= $modx->newObject('modAction');
 $action->fromArray(array(
-    'id' => 1,
-    'namespace' => 'faqman',
-    'parent' => 0,
-    'controller' => 'index',
-    'haslayout' => 1,
+    'id'          => 1,
+    'namespace'   => 'faqman',
+    'parent'      => 0,
+    'controller'  => 'index',
+    'haslayout'   => 1,
     'lang_topics' => 'faqman:default',
-    'assets' => '',
-),'',true,true);
+    'assets'      => '',
+), '', true, true);
 
 /* load action into menu */
 $menu= $modx->newObject('modMenu');
 $menu->fromArray(array(
-    'text' => 'faqman',
-    'parent' => 'components',
+    'text'        => 'faqman',
+    'parent'      => 'components',
     'description' => 'faqman.menu_desc',
-    'icon' => 'images/icons/plugin.gif',
-    'menuindex' => 0,
-    'params' => '',
-    'handler' => '',
-),'',true,true);
+    'icon'        => 'images/icons/plugin.gif',
+    'menuindex'   => 0,
+    'params'      => '',
+    'handler'     => '',
+), '', true, true);
 $menu->addOne($action);
 unset($action);
 
