@@ -25,15 +25,14 @@
  * @package faqman
  * @subpackage build
  */
-$snippets = array();
-
+$snippets   = array();
 $snippets[0]= $modx->newObject('modSnippet');
 $snippets[0]->fromArray(array(
-    'id' => 0,
-    'name' => 'faqMan',
+    'id'          => 0,
+    'name'        => 'faqMan',
     'description' => 'Displays FAQs.',
-    'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/snippet.faqman.php'),
-),'',true,true);
+    'snippet'     => getSnippetContent($sources['source_core'].'/elements/snippets/snippet.faqman.php'),
+), '', true, true);
 $properties = include $sources['build'].'properties/properties.faqman.php';
 $snippets[0]->setProperties($properties);
 unset($properties);
