@@ -27,52 +27,60 @@
  */
 $properties = array(
     array(
-        'name' => 'tpl',
-        'desc' => 'prop_faqman.tpl_desc',
-        'type' => 'textfield',
+        'name'    => 'tpl',
+        'desc'    => 'prop_faqman.tpl_desc',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => 'Faqs',
+        'value'   => 'Faqs',
         'lexicon' => 'faqman:properties',
     ),
     array(
-        'name' => 'sortBy',
-        'desc' => 'prop_faqman.sortby_desc',
-        'type' => 'textfield',
+        'name'    => 'setTpl',
+        'desc'    => 'prop_faqman.tpl_desc',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => 'rank',
+        'value'   => 'Faqs',
         'lexicon' => 'faqman:properties',
     ),
     array(
-        'name' => 'sortDir',
-        'desc' => 'prop_faqman.sortdir_desc',
-        'type' => 'textfield',
+        'name'    => 'sortBy',
+        'desc'    => 'prop_faqman.sortby_desc',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => 'ASC',
+        'value'   => 'rank',
         'lexicon' => 'faqman:properties',
     ),
     array(
-        'name' => 'outputSeparator',
-        'desc' => 'prop_faqman.outputseparator_desc',
-        'type' => 'textfield',
+        'name'    => 'sortDir',
+        'desc'    => 'prop_faqman.sortdir_desc',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => "\n",
+        'value'   => 'ASC',
         'lexicon' => 'faqman:properties',
     ),
     array(
-        'name' => 'toPlaceholder',
-        'desc' => 'prop_faqman.toplaceholder_desc',
-        'type' => 'combo-boolean',
+        'name'    => 'outputSeparator',
+        'desc'    => 'prop_faqman.outputseparator_desc',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => false,
+        'value'   => "\n",
+        'lexicon' => 'faqman:properties',
+    ),
+    array(
+        'name'    => 'toPlaceholder',
+        'desc'    => 'prop_faqman.toplaceholder_desc',
+        'type'    => 'combo-boolean',
+        'options' => '',
+        'value'   => false,
         'lexicon' => 'faqman:properties',
     ),
 /*
     array(
-        'name' => '',
-        'desc' => 'prop_faqman.',
-        'type' => 'textfield',
+        'name'    => '',
+        'desc'    => 'prop_faqman.',
+        'type'    => 'textfield',
         'options' => '',
-        'value' => '',
+        'value'   => '',
         'lexicon' => 'faqman:properties',
     ),
     */
