@@ -1,0 +1,4 @@
+<h2>
+    [[+name]]
+    <div>[[+description]]</div>
+</h2>
